src/index.css
/* @import-normalize; */
/* CSS Mini Reset */

html,
body,
div,
form,
fieldset,
legend,
caption,
label,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre {
  font-size: 100%;
  font-weight: normal;

  margin: 0;
  padding: 0;

  vertical-align: baseline;

  border: 0;
  outline: 0;
  background: transparent;
}

table {
  border-spacing: 0;
  border-collapse: collapse;
}

th,
td {
  text-align: left;
  vertical-align: top;
}

img {
  border: 0;
}
ul {
  padding: 0;
}

* {
  box-sizing: border-box;
}

li {
  text-decoration: none;
  list-style: none;
}
body {
  font-size: 16px;
}

h2 {
  font-family: var(--font-family-markazi);
  font-weight: var(--font-weight-semi-bold);
  font-size: 4rem;
  text-align: center;
}

h3 {
  font-family: var(--font-family-karla);
  font-weight: var(--font-weight-semi-bold);
  font-size: 2rem;
}

h4 {
  font-family: var(--font-family-karla);
  font-weight: var(--font-weight-semi-bold);
  font-size: 1.5rem;
  margin: 0;
}

p {
  font-size: 1.3rem;
}

button {
  font-family: var(--font-family-karla);
  font-weight: var(--font-weight-extra-bold);
}

section {
  margin-top: 10rem;
}

@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700;800&family=Markazi+Text:wght@400;600;700&display=swap");
:root {
  /*Font Family and Font Weights */
  --font-family-karla: "Karla", serif;
  --font-family-markazi: "Markazi Text", serif;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --font-weight-semi-bold: 600;
  --font-weight-bold: 700;
  --font-weight-extra-bold: 800;

  /*Document Colors*/
  --primary-green: #495e57;
  --primary-yellow: #f4ce14;
  --secondary-tangerince: #ee9972;
  --secondary-light-orange: #fbdabb;
  --highlight-anti-white: #edefee;
  --highlight-black: #333333;

  /* --primary-green: #49se67; */
}

.navbar {
  display: flex;
  background-color: white;
  justify-content: center;
  align-items: center;
  padding: 1rem 5rem;
  column-gap: 50px;
  box-shadow: 0px 4px 4px 1px hsl(0, 0%, 84%);
  position: sticky;
}

.navbar-links {
  font-family: var(--font-family-karla);
  font-weight: var(--font-weight-extra-bold);
  list-style: none;
  padding: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  gap: 20px;
}

.navbar-links a {
  text-decoration: none;
  color: var(--highlight-black);
  font-size: 1rem;
}

.navbar-links a:hover {
  text-decoration: underline;
  text-decoration-color: var(--primary-yellow);
  text-decoration-thickness: 3px;
  text-underline-offset: 10px;
}

.navbar-mobile {
  display: none;
}
.footer {
  position: absolute;
  bottom: 0;
  display: grid;
  justify-items: center;
  padding: 5rem 0rem;
  width: 100vw;
  background-color: var(--primary-green);
}

.footer ul {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 15px;
}

.footer h3 {
  color: var(--highlight-anti-white);
}

.footer a {
  color: var(--highlight-anti-white);
  font-family: var(--font-family-karla);
  text-decoration: none;
}

.footer a:hover {
  color: var(--primary-yellow);
  font-weight: var(--font-weight-bold);
}

/* Card Component */

.card-container {
  display: flex;
  flex-direction: column;
  background-color: var(--highlight-anti-white);
  max-width: 300px;
  transition: transform 0.5s;
}

/* Card Component */

.grow {
  flex-grow: 1;
}

/* Main Header */
header {
  background-color: var(--primary-green);
  position: relative;
}

.header-container {
  display: flex;
  /* flex-direction: row; */
  justify-content: space-between;
  align-items: center;
  width: 70%;
  margin: 0 auto;
  padding: 3rem 0;
}

.header-info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 40%;
}

.header-info h2 {
  color: var(--primary-yellow);
  margin-bottom: -8px;
  text-align: left;
}

.header-info h3 {
  color: var(--highlight-anti-white);
}

.header-info p {
  color: var(--highlight-anti-white);
  word-wrap: break-word;
  width: 60%;
  margin-top: 15px;
}

.header-info button {
  background: none;
  border: none;
  appearance: none;
  outline: none;
  margin: 0 auto;
  color: var(--highlight-black);
  background-color: var(--primary-yellow);
  border-radius: 11px;
  padding: 0.6rem 1.1rem;
  margin-top: 1.3rem;
  font-size: 1.2rem;
}

.header-info button:hover {
  cursor: pointer;
  background-color: var(--secondary-tangerince);
}

.header-img {
  width: 40%;
  height: 450px;
  background: url(./assets/restauranfood.jpg) no-repeat center / cover;
  border-radius: 20px;
  margin-bottom: -160px;
}

/* Main Header */

/* Specials */

.specials {
  width: 70%;
  margin-left: auto;
  margin-right: auto;
}

.specials-title {
  display: flex;
  justify-content: space-between;
}

.specials-image {
  max-height: 200px;
}

.specials button {
  display: block;
  background: none;
  outline: none;
  border: none;
  appearance: none;
  background-color: var(--primary-yellow);
  border-radius: 11px;
  padding: 0.6rem 2rem;
  margin-top: 1.3rem;
  font-size: 1.2rem;
}

.specials button:hover {
  cursor: pointer;
  background-color: var(--secondary-tangerince);
}

.specials-cards {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 25px;
  margin-top: 3rem;
}

.specials-cards-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 25px;
  padding: 15px 20px;
  height: 100%;
}

.specials-cards-content h3,
.specials-cards-content span {
  font-family: var(--font-family-karla);
  font-weight: var(--font-weight-extra-bold);
  font-size: 1.1rem;
}

.specials-cards-content p {
  color: #474747;
}

.specials-cards-content button {
  background: none;
  text-align: left;
  padding: 0;
  margin-bottom: 10px;
}

.specials-cards-content button:hover {
  background-color: transparent;
}

.specials-card-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.specials-card-title span {
  color: var(--secondary-tangerince);
}

/* Specials */

/* Testimonials */
.testimonial-container {
  width: 80%;
  margin: 4rem auto;
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
}

.testimonial-container h3 {
  text-align: center;
  margin-top: 1rem;
}

.testimonial-card {
  display: flex;
  flex-direction: column;
  max-width: 280px;
  padding: 15px 20px;
  height: 100%;
}

.testimonial-card p {
  font-family: var(--font-family-karla);
  text-align: center;
}

.testimonial-card img {
  max-width: 200px;
  display: block;
  margin: 1.5rem auto;
}

.star-container {
  display: flex;
  /* flex-wrap: wrap; */
  margin-top: 1rem;
}

.star {
  width: 40px;
}

img.star {
  margin: 0;
}

/* Testimonials */

/* About */
.about {
  width: 70%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1000px;
}

.about-container {
  display: flex;
}

.about-text {
  width: 50%;
}

.about-text h2 {
  text-align: left;
  margin-bottom: 0;
}

.about-text h3 {
  margin-top: -20px;
}

.about-text p {
  margin-top: 2.5rem;
  width: 90%;
}

.about-images {
  display: flex;
  position: relative;
  max-width: 50%;
  height: 80vh;
}

.about-images img {
  width: 100%;
  max-width: 350px;
  height: auto;
}

.about-images img:first-child {
  margin-top: 150px;
  z-index: 3;
}

.about-images img:last-child {
  margin-left: -100px;
  z-index: 1;
}

/* About */

@media (min-width: 600px) {
  .footer {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 900px) {
  .footer {
    grid-template-columns: repeat(4, 1fr);
  }
  .card-container:hover {
    transform: scale(1.2);
    box-shadow: 0px 3px 10px 3px rgb(174, 174, 174);
    z-index: 2;
  }
}

@media (max-width: 599px) {
  .navbar {
    display: none;
  }

  .hamburger {
    position: relative;
    display: block;
    width: 35px;
    cursor: pointer;

    appearance: none;
    background: none;
    outline: none;
    border: none;
  }

  .hamburger .bar,
  .hamburger:after,
  .hamburger:before {
    content: "";
    display: block;
    width: 100%;
    height: 5px;
    background-color: var(--highlight-black);
    margin: 6px 0px;
    transition: 0.4s;
  }

  .hamburger.is-active::before {
    transform: rotate(-45deg) translate(-8px, 7px);
  }
  .hamburger.is-active::after {
    transform: rotate(45deg) translate(-9px, -7px);
  }
  .hamburger.is-active .bar {
    opacity: 0;
  }

  .navbar-mobile {
    position: fixed;
    display: block;
    width: 100%;
    height: 100vh;
    z-index: 90;
    transition: 0.4s;
  }

  .navbar-mobile.is-active {
    left: 0;
  }

  .navbar-mobile .top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 90px;
    background-color: var(--highlight-anti-white);
    position: relative;
  }

  .navbar-mobile .top img {
    margin-right: 20px;
  }

  .navbar-mobile .top button {
    margin-left: 5px;
  }

  .navbar-menu {
    display: none;
  }
  .navbar-menu.is-active {
    display: flex;
    padding-top: 2rem;
    flex-direction: column;
    align-items: center;
    text-align: center;
    font-size: 2rem;
    background-color: var(--primary-green);
    min-height: 100vh;
  }

  .navbar-menu a {
    padding: 15px 16px;
    color: var(--highlight-anti-white);
    text-decoration: none;
    width: 100%;
  }

  .navbar-menu a:hover {
    background-color: var(--secondary-tangerince);
    cursor: pointer;
  }

  .about {
    width: 100%;
  }
  .about-container {
    flex-direction: column;
    align-items: center;
  }

  .about-text h2 {
    line-height: 0.6;
    margin-bottom: 15px;
    text-align: center;
  }

  .about-text h3 {
    text-align: center;
  }

  .about-text p {
    margin-left: auto;
    margin-right: auto;
  }

  .about-images {
    flex-direction: column;
    align-items: center;
    gap: 30px;
  }

  .about-images img:first-child {
    margin-top: 50px;
  }

  .about-images img:last-child {
    margin-left: 0px;
  }

  .footer {
    grid-template-columns: 1fr;
    justify-content: center;
    align-items: center;
    justify-items: center;
    gap: 20px;
    position: relative;
    text-align: center;
  }

  .footer img {
    margin-bottom: 50px;
  }

  .footer ul {
    align-items: center;
    gap: 20px;
  }
}

